# GStreamer_Webcam_Conrtoller

./: CMakeLists.txt  Command.cpp  Command.hpp  CommandKey.cpp  CommandKey.hpp  README.md  StreamController.cpp  StreamController.hpp  StreamUI.cpp  StreamUI.hpp  SubVideoStream.cpp  SubVideoStream.hpp  VideoStream.cpp  VideoStream.hpp  main.cpp
